<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface">

    <include
        android:id="@+id/top_bar"
        layout="@layout/layout_top_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="0dp"
        android:layout_height="@dimen/bottom_nav_height"
        android:background="@color/surface_container_lowest"
        app:itemIconTint="@color/nav_item_selector"
        app:itemTextColor="@color/nav_item_selector"
        app:itemRippleColor="@color/stroke_medium"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_nav_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/space_md">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_telemetry_ledger"
                    style="@style/Text.LabelTelemetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_badge"
                    android:paddingHorizontal="@dimen/space_xs"
                    android:paddingVertical="3dp"
                    android:text="@string/label_local_log"
                    android:textColor="@color/primary_container"
                    style="@style/Text.LabelBadge" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xs"
                android:orientation="vertical"
                style="@style/Card.ContainerLow">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_logged_this_month"
                            style="@style/Text.LabelTelemetry" />

                        <TextView
                            android:id="@+id/text_month_duration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            style="@style/Text.MetricCard"
                            tools:text="18h 40m" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="end">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_completed_caps"
                            android:textColor="@color/primary_container"
                            style="@style/Text.LabelTelemetry" />

                        <TextView
                            android:id="@+id/text_month_sessions"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            style="@style/Text.HeadlineMd"
                            tools:text="24 Sessions" />

                    </LinearLayout>

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progress_month_pacing"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_marginTop="@dimen/space_sm"
                    android:max="100"
                    android:progressDrawable="@drawable/progress_rounded"
                    android:progressTint="@color/primary_container"
                    tools:progress="65" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_xs"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_month_goal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/Text.Caption"
                        tools:text="Goal: 20h / month" />

                    <TextView
                        android:id="@+id/text_month_pacing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_container"
                        style="@style/Text.LabelTelemetry"
                        tools:text="93% PACING" />

                </LinearLayout>

            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm"
                android:scrollbars="none">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleLine="true"
                    app:singleSelection="true"
                    app:selectionRequired="true" />

            </HorizontalScrollView>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_workouts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/space_md"
                tools:listitem="@layout/item_workout" />

            <LinearLayout
                android:id="@+id/layout_empty_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/space_2xl"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_history_title"
                    style="@style/Text.HeadlineSm" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_2xs"
                    android:gravity="center"
                    android:text="@string/empty_history_subtitle"
                    style="@style/Text.BodyMd"
                    android:textColor="@color/on_surface_variant" />

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
